[gd_scene load_steps=10 format=2]

[ext_resource path="res://tiles/terrain/water/water_material.tres" type="Material" id=1]
[ext_resource path="res://tiles/terrain/water/water_template.gd" type="Script" id=2]
[ext_resource path="res://tiles/terrain/sand/sand_material.tres" type="Material" id=3]
[ext_resource path="res://tiles/terrain/sand/sand_tile.tres" type="Resource" id=4]
[ext_resource path="res://tiles/terrain/sand/corner_floor.mesh" type="ArrayMesh" id=5]

[sub_resource type="PlaneMesh" id=1]
material = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=2]
material = ExtResource( 3 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.25, 1 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( 1, -0.5, -1, -1, -0.5, 1, -1, -0.5, -1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )
sand_tile = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="flat_collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0 )
shape = SubResource( 3 )

[node name="corner_floor" type="MeshInstance" parent="."]
mesh = ExtResource( 5 )
material/0 = null

[node name="corner_floor_collision" type="CollisionShape" parent="."]
shape = SubResource( 4 )
